feat: sms_send 테이블 활용 행사/설문 문자 발송 이력 관리
행사참여자 문자 발송 시 중복 번호 감지 오류 해결을 위해
sms_send 테이블에 발송 이력을 기록하고 API 응답에 messageSent 필드 추가

- SmsSend 엔티티 및 SmsSendMapper 신규 생성 (PRIMARY DB)
- 5개 발송 메서드에 sms_send INSERT 추가 (try-catch로 실패 시 발송 미영향)
- ParticipantForMessageResponse에 messageSent 필드 추가
- getParticipantsForMessage()에서 발송 이력 기반 messageSent 플래그 병합